--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "ai-core",
   "type": "module",
   "version": "1.0.0",
-  "module": "dist/index.js",
-  "main": "dist/index.js",
   "scripts": {
-    "start": "bun run ./src/example.ts",
-    "build": "tsc && bun build ./src/index.ts --outdir dist"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
+    "start": "tsx ./src/example.ts",
+    "build": "tsc && npm build ./src/index.ts --outdir dist"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -18,5 +13,9 @@
     "@ai-sdk/groq": "^1.1.6",
     "ai": "^4.1.13",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.12.0",
+    "tsx": "^4.19.2"
   }
 }
